--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,9 @@
 [filepath]
 tacoco-path=/home/dongxinxiang/tacoco
 run-tacoco-path=/home/dongxinxiang/tacoco/scripts/run-tacoco
+repo-list=https://github.com/sunflower0309/jsoup.git
 project-path=/home/dongxinxiang/commons-io-master
-cov-matrix-path=/home/dongxinxiang/tacoco/tacoco_output/jsoup-master-cov-matrix.json
+cov-matrix-path=/home/dongxinxiang/tacoco/tacoco_output/
+
+[webhook-proj]
+proj-list=https://github.com/sunflower0309/jsoup.git, https://github.com/sunflower0309/zxing.git, https://github.com/sunflower0309/gson.git
