branch for frontend

--- a/config.ini
+++ b/config.ini
@@ -6,4 +6,4 @@ project-path=/home/dongxinxiang/commons-io-master
 cov-matrix-path=/home/dongxinxiang/tacoco/tacoco_output/
 
 [webhook-proj]
-proj-list=https://github.com/sunflower0309/jsoup.git, https://github.com/sunflower0309/zxing.git, https://github.com/sunflower0309/gson.git
+proj-list=https://github.com/sunflower0309/jsoup.git
