--- a/config.ini
+++ b/config.ini
@@ -5,5 +5,5 @@ repo-list=https://github.com/sunflower0309/jsoup.git
 project-path=/home/dongxinxiang/commons-io-master
 cov-matrix-path=/home/dongxinxiang/tacoco/tacoco_output/
 
-[webhook-proj]
-proj-list=https://github.com/sunflower0309/jsoup.git
+[polling]
+proj-list= {"sunflower0309":["gson","jsoup"]}
