--- a/config.ini
+++ b/config.ini
@@ -6,4 +6,4 @@ project-path=/home/dongxinxiang/commons-io-master
 cov-matrix-path=/home/dongxinxiang/tacoco/tacoco_output/
 
 [polling]
-proj-list= {"sunflower0309":["gson","jsoup"]}
+proj-list= {"spideruci":["Tarantula"]}
