parameterized some scripts

--- a/config.ini
+++ b/config.ini
@@ -6,4 +6,8 @@ project-path=/home/dongxinxiang/commons-io-master
 cov-matrix-path=/home/dongxinxiang/tacoco/tacoco_output/
 
 [polling]
-proj-list= {"spideruci":["Tarantula"]}
+proj-list= {"sunflower0309":["jsoup","gson","commons-io"]}
+
+[docker]
+image=sunflower0309/spider-container:1.6
+database=SpiderSenseWorker
