--- a/config.ini
+++ b/config.ini
@@ -6,8 +6,8 @@ project-path=/home/dongxinxiang/commons-io-master
 cov-matrix-path=/home/dongxinxiang/tacoco/tacoco_output/
 
 [polling]
-proj-list= {"sunflower0309":["jsoup","gson","commons-io"]}
-
+proj-list= {"apache":["commons-io"],"sunflower0309":["jsoup","gson","commons-io"]}
+access-token=
 [docker]
-image=sunflower0309/spider-container:1.6
+image=sunflower0309/spider-container:1.7
 database=SpiderSenseWorker
