limit maximum number of docker container

--- a/config.ini
+++ b/config.ini
@@ -7,7 +7,8 @@ cov-matrix-path=/home/dongxinxiang/tacoco/tacoco_output/
 
 [polling]
 proj-list= {"apache":["commons-io"],"sunflower0309":["jsoup","gson","commons-io"]}
-access-token=
+token=f7dc157fd577258a64d3197da6755c61252c1871
+maximum-container=5
 [docker]
 image=sunflower0309/spider-container:1.7
 database=SpiderSenseWorker
