--- a/config.ini
+++ b/config.ini
@@ -1,14 +1,15 @@
 [filepath]
 tacoco-path=/home/dongxinxiang/tacoco
 run-tacoco-path=/home/dongxinxiang/tacoco/scripts/run-tacoco
-repo-list=https://github.com/sunflower0309/jsoup.git
-project-path=/home/dongxinxiang/commons-io-master
 cov-matrix-path=/home/dongxinxiang/tacoco/tacoco_output/
 
 [polling]
-proj-list= {"apache":["commons-io"],"sunflower0309":["jsoup","gson","commons-io"]}
-token=
-maximum-container=5
+proj-list= {"apache":["commons-io"],"sunflower0309":["jsoup","gson","commons-io"],"google":["gson","truth"]}
+token=99cb2018f40170847dae0b76b98e7aadb4d699f6
+maximum-container=2
+maximum-queue=5
+
 [docker]
 image=sunflower0309/spider-container:1.7
 database=SpiderSenseWorker
+sockpath=unix:///var/run/docker.sock
