add docker container check

--- a/config.ini
+++ b/config.ini
@@ -4,8 +4,8 @@ run-tacoco-path=/home/dongxinxiang/tacoco/scripts/run-tacoco
 cov-matrix-path=/home/dongxinxiang/tacoco/tacoco_output/
 
 [polling]
-proj-list= {"apache":["commons-io"],"sunflower0309":["jsoup","gson","commons-io"],"google":["gson","truth"]}
-token=99cb2018f40170847dae0b76b98e7aadb4d699f6
+proj-list= {"apache":["flink"],"sunflower0309":["jsoup","gson","commons-io"],"google":[]}
+token=b9869c3dbcba00741c386d5f2628f7543d65348b
 maximum-container=2
 maximum-queue=5
 
