add docker container check

--- a/config.ini
+++ b/config.ini
@@ -5,7 +5,7 @@ cov-matrix-path=/home/dongxinxiang/tacoco/tacoco_output/
 
 [polling]
 proj-list= {"apache":["flink"],"sunflower0309":["jsoup","gson","commons-io"],"google":[]}
-token=b9869c3dbcba00741c386d5f2628f7543d65348b
+token=6fd7533c62fd38c8895029be1191b758b4e749b8
 maximum-container=2
 maximum-queue=5
 
@@ -13,3 +13,4 @@ maximum-queue=5
 image=sunflower0309/spider-container:1.7
 database=SpiderSenseWorker
 sockpath=unix:///var/run/docker.sock
+maxlife=600
