update some api and utils

--- a/config.ini
+++ b/config.ini
@@ -1,16 +1,17 @@
-[filepath]
-tacoco-path=/home/dongxinxiang/tacoco
-run-tacoco-path=/home/dongxinxiang/tacoco/scripts/run-tacoco
-cov-matrix-path=/home/dongxinxiang/tacoco/tacoco_output/
+# [filepath]
+# tacoco-path=/home/dongxinxiang/tacoco
+# run-tacoco-path=/home/dongxinxiang/tacoco/scripts/run-tacoco
+# cov-matrix-path=/home/dongxinxiang/tacoco/tacoco_output/
 
 [polling]
-proj-list= {"apache":["flink"],"sunflower0309":["jsoup","gson","commons-io"],"google":[]}
-token=6fd7533c62fd38c8895029be1191b758b4e749b8
-maximum-container=2
+proj-list= {"apache":["commons-io"],"sunflower0309":["jsoup","gson","commons-io"],"google":[],"jajones":["mid_example"]}
+token=b98df3b10f85c477f3326cf6605d733c189aa18b
+maximum-container=4
 maximum-queue=5
 
 [docker]
-image=sunflower0309/spider-container:1.7
+image=sunflower0309/spider-container:2.0
 database=SpiderSenseWorker
+password=FuzzyTarantula5243
 sockpath=unix:///var/run/docker.sock
 maxlife=600
