update some api and utils

--- a/config.ini
+++ b/config.ini
@@ -5,7 +5,7 @@
 
 [polling]
 proj-list= {"apache":["commons-io"],"sunflower0309":["jsoup","gson","commons-io"],"google":[],"jajones":["mid_example"]}
-token=b98df3b10f85c477f3326cf6605d733c189aa18b
+token=
 maximum-container=4
 maximum-queue=5
 
