update some api and utils

--- a/config.ini
+++ b/config.ini
@@ -4,14 +4,14 @@
 # cov-matrix-path=/home/dongxinxiang/tacoco/tacoco_output/
 
 [polling]
-proj-list= {"apache":["commons-io"],"sunflower0309":["jsoup","gson","commons-io"],"google":[],"jajones":["mid_example"]}
-token=
+proj-list= {"jajones":["mid_example"]}
+token=8cb193c46f25d5de28285a2bf89c4c58ba898987
 maximum-container=4
 maximum-queue=5
 
 [docker]
 image=sunflower0309/spider-container:2.0
 database=SpiderSenseWorker
-password=FuzzyTarantula5243
+password=313461
 sockpath=unix:///var/run/docker.sock
 maxlife=600
