update some api and utils

--- a/config.ini
+++ b/config.ini
@@ -5,7 +5,7 @@
 
 [polling]
 proj-list= {"jajones":["mid_example"]}
-token=8cb193c46f25d5de28285a2bf89c4c58ba898987
+token=
 maximum-container=4
 maximum-queue=5
 
