get pull requests

--- a/config.ini
+++ b/config.ini
@@ -4,9 +4,9 @@
 # cov-matrix-path=/home/dongxinxiang/tacoco/tacoco_output/
 
 [polling]
-proj-list= {"jajones":["mid_example"]}
+proj-list= {"jajones":["mid_example"],"apache":["commons-io"],"sunflower0309":["jsoup"]}
 token=
-maximum-container=4
+maximum-container=2
 maximum-queue=5
 
 [docker]
