improve query speed

--- a/config.ini
+++ b/config.ini
@@ -5,7 +5,7 @@
 
 [polling]
 proj-list= {"jajones":["mid_example"],"apache":["commons-io"],"sunflower0309":["jsoup"]}
-token=
+token=8b9d305b6cb29020f1feb097da6a7137d0bef39c
 maximum-container=2
 maximum-queue=5
 
